--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "524e0025-1ba5-4840-b70e-57eb3042b372",
    "metadata": {},
    "outputs": [],
@@ -13,43 +13,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5ae75df1-01b5-4da4-825d-95cb1d765f9c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import warnings\n",
+    "import sys\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import ElasticNet\n",
+    "from urllib.parse import urlparse\n",
+    "import mlflow.sklearn\n",
+    "import mlflow\n",
+    "from mlflow.models.signature import infer_signature\n",
+    "from mlflow.utils.mlflow_tags import MLFLOW_GIT_COMMIT, MLFLOW_SOURCE_TYPE, MLFLOW_GIT_BRANCH, MLFLOW_GIT_REPO_URL, MLFLOW_SOURCE_NAME"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e96abde5-1d98-438c-a3cf-e36231eefd19",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.environ[\"MLFLOW_ENABLE_SYSTEM_METRICS_LOGGING\"] = \"true\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e54f84ff-36b3-418e-9722-f9ac6cca9829",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def eval_metrics(actual, pred):\n",
+    "    rmse = np.sqrt(mean_squared_error(actual, pred))\n",
+    "    mae = mean_absolute_error(actual, pred)\n",
+    "    r2 = r2_score(actual, pred)\n",
+    "    return rmse, mae, r2\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7b93aaf8-e329-481d-9235-71a44eddc9de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "csv_url = (\n",
+    "    \"http://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv\"\n",
+    ")\n",
+    "try:\n",
+    "    data = pd.read_csv(csv_url, sep=\";\")\n",
+    "except Exception as e:\n",
+    "    print(\n",
+    "        \"Unable to download training & test CSV, check your internet connection. Error: %s\", e\n",
+    "    )"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4937478e-4a64-4ff4-9cda-fff252e9a1c6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#  Split the data into training and test sets. (0.75, 0.25) split.\n",
+    "train, test = train_test_split(data)\n",
+    "# The predicted column is \"quality\" which is a scalar from [3, 9]\n",
+    "train_x = train.drop([\"quality\"], axis=1)\n",
+    "test_x = test.drop([\"quality\"], axis=1)\n",
+    "train_y = train[[\"quality\"]]\n",
+    "test_y = test[[\"quality\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ee28c9f0-66f0-476d-b5a3-61095b02971a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 0.645345\n",
+    "l1_ratio = 0.835345"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,11 +137,24 @@
     "\n",
     "repo = git.Repo(\"\")\n",
     "with mlflow.start_run():\n",
-    "    # Log the parameters used for the model fit\n",
-    "    mlflow.log_params(params)\n",
+    "    lr = ElasticNet(alpha=alpha, l1_ratio=l1_ratio, random_state=42)\n",
+    "    lr.fit(train_x, train_y)\n",
     "\n",
-    "    # Log the error metrics that were calculated during validation\n",
-    "    mlflow.log_metrics(metrics)\n",
+    "    predicted_qualities = lr.predict(test_x)\n",
+    "    signature = infer_signature(train_x, lr.predict(train_x))\n",
+    "\n",
+    "    (rmse, mae, r2) = eval_metrics(test_y, predicted_qualities)\n",
+    "\n",
+    "    # Log the parameters and matrics used for the model fit\n",
+    "    print(\"Elasticnet model (alpha=%f, l1_ratio=%f):\" % (alpha, l1_ratio))\n",
+    "    print(\"  RMSE: %s\" % rmse)\n",
+    "    print(\"  MAE: %s\" % mae)\n",
+    "    print(\"  R2: %s\" % r2)\n",
+    "    mlflow.log_param(\"alpha\", alpha)\n",
+    "    mlflow.log_param(\"l1_ratio\", l1_ratio)\n",
+    "    mlflow.log_metric(\"rmse\", rmse)\n",
+    "    mlflow.log_metric(\"r2\", r2)\n",
+    "    mlflow.log_metric(\"mae\", mae)\n",
     "\n",
     "    tag = {MLFLOW_GIT_COMMIT: repo.head.commit, MLFLOW_SOURCE_TYPE:'GIT PROJECT', \n",
     "           MLFLOW_GIT_BRANCH:repo.active_branch, MLFLOW_SOURCE_NAME:repo.remote().url}\n",
@@ -96,7 +162,7 @@
     "    mlflow.set_tags(tag)\n",
     "    # Each Branch corresponds to one Registered Model in mlflow\n",
     "    model_name = repo.active_branch.name\n",
-    "    "
+    "    mlflow.sklearn.log_model(lr, \"model\", registered_model_name=model_name, signature=signature)"
    ]
   },
   {
